# splintr

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py  benchmark_batch.py  benchmark_regexr_comparison.py  benchmark_regexr_viz.py  benchmark_single.py  benchmark_splintr.py  compare_tokenizers.py
benchmarks/vocabs/: benchmark_cl100k.py  benchmark_llama3.py  benchmark_o200k.py
docs/: api_guide.md  bytelevel_bpe.md  special_tokens.md
hooks/: pre-commit
python/splintr/: __init__.py
python/splintr/vocabs/: deepseek_v3.tiktoken  mistral.tiktoken  mistral_v2.tiktoken  mistral_v3_tekken.tiktoken
python/tests/: __init__.py  test_cl100k.py  test_deepseek_v3.py  test_llama3.py  test_mistral_v1.py  test_mistral_v2.py  test_mistral_v3.py  test_o200k.py
scripts/: convert_deepseek_vocab.py  extract_deepseek_vocab.py  extract_mistral_v2_vocab.py  extract_mistral_v3_vocab.py  extract_mistral_vocab.py  generate_agent_tokens.py  update_version.sh
src/: lib.rs
src/core/: byte_level.rs  mod.rs  pretrained.rs  streaming.rs  tokenizer.rs  vocab.rs
src/python/: agent_tokens_generated.rs  bindings.rs  mod.rs
tests/: cl100k.rs  deepseek_v3.rs  llama3.rs  mistral_v2.rs  mistral_v3.rs  o200k.rs
