[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "splintr-rs"
version = "0.3.0"
description = "Fast Rust BPE tokenizer with Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["tokenizer", "bpe", "tiktoken", "gpt", "llm"]
authors = [
    {name = "Farhan"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/farhan/splintr"
Repository = "https://github.com/farhan/splintr"
Documentation = "https://github.com/farhan/splintr#readme"

[tool.maturin]
python-source = "python"
module-name = "splintr._core"
bindings = "pyo3"
features = ["pyo3/extension-module"]
